--- a/SimpleWeb2/Views/Home/Index.cshtml
+++ b/SimpleWeb2/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <h1>Welcome</h1>
     <p class="lead">This is my Website Dedicated to World Domination, Here we can discuss plans to overthrow the government</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <img src="https://testingcircle-my.sharepoint.com/personal/cbalosache_spartaglobal_com/Documents/Microsoft%20Teams%20Chat%20Files/Rommel.jpg"  width="600" height="600"/>
 </div>
 
 <div class="row">
