--- a/SimpleWeb2/Views/Home/Index.cshtml
+++ b/SimpleWeb2/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
+<div class="jumbotron" style="background-color:coral">
     <h1>Welcome</h1>
     <p class="lead">This is my Website Dedicated to World Domination, Here we can discuss plans to overthrow the government</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -13,9 +13,9 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            To join just register on this site and you automatically become a member, We will send you a welcome package and how you can contribute.
+            Să faci din rahat bici
+           
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
