--- a/SimpleWeb2/Views/Shared/_Layout.cshtml
+++ b/SimpleWeb2/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Register", "Create", "Customers")</li>
+                    <li>@Html.ActionLink("Images", "Images", "Home")</li>
                 </ul>
             </div>
         </div>
